[package]
name = "llm-security"
version = "0.1.0"
edition = "2021"
authors = ["Red Asgard <hello@redasgard.com>"]
license = "MIT"
description = "Comprehensive LLM security layer to prevent prompt injection and manipulation attacks"
repository = "https://github.com/redasgard/llm-security"
keywords = ["security", "llm", "ai", "prompt-injection", "gpt"]
categories = ["security", "authentication", "text-processing", "cryptography"]
readme = "README.md"

[dependencies]
regex = "1.10"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "0.1"

# Optional tracing support
tracing = { version = "0.1", optional = true }

[dev-dependencies]

[features]
default = []
tracing = ["dep:tracing"]

[lib]
name = "llm_security"
path = "src/lib.rs"

